--- a/index.html
+++ b/index.html
@@ -362,6 +362,40 @@
         </div>
 		
 
+
+<!--------------------------->
+
+  <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/images/kaggle-colab.png" data-gall="portfolioGallery" class="venobox">
+                <div class="work-img">
+                  <img src="assets/images/autoencoder.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+				    <h2 class="w-title">AUTOENCODERS - Detecção de Anomalias / Fraude / Remoção de Ruido e Redução de Dimensão</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Análises / Github</span> / <span class="w-date">26/04/2022</span>
+					  <!--<p class="subtitle-a">-->
+					  <p class="lead">
+                      A arquitetura do autoencoder se baseia no aprendizado de caracteristicas de entrada, que devem estar presentes na saida.<br> Novos dados são apresentados e o modelo aplica o aprendizado e gera uma nova saida.
+					</p><br>
+                    </p>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://colab.research.google.com/github/silviolima07/autoencoders/blob/main/Autoencoder.ipynb"> <span class="ion-ios-plus-outline"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+		  
+
 <!--------------------------->
 
            <div class="work-content">
@@ -1339,7 +1373,7 @@
             <div class="card card-blog">
               <div class="work-box">
                 <div class="work-img">
-                  <img src="assets/images/autoencoder.jpg" alt="" class="img-fluid">
+                  <img src="assets/images/CRISP-DM.png" alt="" class="img-fluid">
                 </div>
               </div>
               <div class="card-body">
@@ -1354,6 +1388,27 @@
                <h3 class="card-title">Medium:<br><a href="https://medium.com/@silviolima07_26127/crisp-dm-para-projetos-de-machine-learning-394398e8c154">CRISP-DM para Projetos de Machine Learning</a></h3>
               </div>
             </div>
+			
+			<div class="col-md-4">
+            <div class="card card-blog">
+              <div class="work-box">
+                <div class="work-img">
+                  <img src="assets/images/canvas.png" alt="" class="img-fluid">
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="card-category-box">
+                  <div class="card-category">
+                    <h6 class="category">Canvas</h6>
+                  </div>
+                </div>
+                <!--<h3 class="card-title">Deploy do modelo</h3>-->
+                <p class="card-description">
+                </p>
+               <h3 class="card-title">Medium:<br><a href="https://medium.com/@silviolima07_26127/machine-learning-canvas-mlc-867bfe148ccb">Machine Learning Canvas</a></h3>
+              </div>
+            </div>
+         </div>
          </div>
     </section><!-- End Blog Section -->
 
