--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
      </div>
 	<!--------------------------->
 	  
-        <div class="work-content">
+        <div class="row">
 		        <a href="assets/images/kaggle-colab.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
                   <img src="assets/images/autoencoder.jpg" alt="" class="img-fluid">
